Better management of ultra orbits in the downloader

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -29,9 +29,9 @@ bkg = ["igs.bkg.bund.de" "21"]
 #gnss = "?{cddis}/gps/products/${WWWW}/"
 #glo = "?{cddis}/pub/glonass/products/${WWWW}/"
 #mgex = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
-gps = "?{bkg}/IGS/products/orbits/${WWWW}/"
-gnss = "?{bkg}/IGS/products/mgex/${WWWW}/"
-glo = "?{bkg}/IGS/products/orbits/${WWWW}/"
+gps = "?{ign_ensg}/pub/igs/products/${WWWW}/"
+gnss = "?{ign_ensg}/pub/igs/products/mgex/${WWWW}/"
+glo = "?{ign_ensg}/pub/igs/products/${WWWW}/"
 mgex = "?{bkg}/IGS/products/mgex/${WWWW}/"
 esa = "?{esa}/products/gnss-products/${WWWW}/"
 code_rt = "?{aiub}/CODE/"
@@ -272,7 +272,7 @@ location = ["aiub_code"]
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_GR" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -357,11 +357,11 @@ iono_center = "default"
 atm_load = "tuw_atm_load_v04"
 
 [oc_igs_glo]
-description = "IGS average solution - GLONASS"
-final = "igs_eph_glo_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
+description = "IGS average solution - GPS+GLONASS"
+final = "igs_eph_GR_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
-rapid = "igs_eph_glo_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
-rapid_latency = [17 41]
+ultra = "igs_eph_GR_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
+ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
@@ -374,7 +374,6 @@ final = "( code_eph | code_sp3 ) & ( code_erp1 | code_erp2 ) & ( code_clk_05s | 
 final_latency = [168 312]
 iono_center = "code"
 bias = "code_mgex_aiub_bias"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -385,7 +384,6 @@ final = "( code1d_eph | code1d_sp3 ) & ( code_erp2 ) & ( code1d_clk_30s | code1d
 final_latency = [168 312]
 iono_center = "code"
 bias = "code_mgex_aiub_bias"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -396,7 +394,6 @@ final = "( code_eph | code_sp3 ) & ( code_erp2 | code_erp1 ) & ( code_clk_30s | 
 final_latency = [168 312]
 iono_center = "code"
 bias = "code_mgex_aiub_bias"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -419,7 +416,6 @@ description = "Centre national d'études spatiales - orbit products needed for i
 final = "( cnes_sp3 ) & ( cnes_erp ) & ( cnes_clk )"
 final_latency = [168 312]
 iono_center = "cnes"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -442,10 +438,9 @@ final_latency = [0 0]
 description = "GeoForschungsZentrum Potsdam"
 final = "( gfz_sp3 | gfz_sp3_new ) & ( gfz_erp | gfz_erp_new | null ) & ( gfz_clk | gfz_clk_new )"
 final_latency = [48 312]
-rapid = "( gfz_rapid_sp3 ) & ( gfz_rapid_erp  | null ) & ( gfz_rapid_clk )"
-ultra = "( gfz_ultra_sp3 ) & ( gfz_ultra_erp  | null )"
+rapid = "( gfz_sp3_rapid ) & ( gfz_erp_rapid  | null ) & ( gfz_rapid_clk )"
+ultra = "( gfz_sp3_ultra ) & ( gfz_erp_ultra  | null )"
 iono_center = "code"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -481,7 +476,6 @@ description = "Centre national d'études spatiales - orbit products needed for i
 final = "( cnes_mgex_sp3 ) & ( cnes_erp ) & ( cnes_mgex_clk )"
 final_latency = [168 312]
 iono_center = "cnes"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -558,7 +552,6 @@ rapid_latency = [0 312]
 ultra = "( hour_eph_ultra ) & ( hour_erp_ultra ) & ( hour_clk_5s_ultra )"
 ultra_latency = [0 72]
 iono_center = "whuan"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -569,13 +562,13 @@ atm_load = "tuw_atm_load_v04"
 
 # DEFAULT ------------------------------------------------------------------------------------------
 
-[f_igs_eph_glo_final]
-name = ["R@igl"]
+[f_igs_eph_GR_final]
+name = ["GR@igl"]
 filename = "igl${WWWWD}.sp3"
 location = ["glo"]
 
-[f_igs_eph_glo_rapid]
-name = ["R@igv"]
+[f_igs_eph_GR_rapid]
+name = ["GR@igv"]
 filename = "igv${WWWWD}.sp3"
 location = ["glo"]
 
@@ -595,11 +588,11 @@ filename = "igu${WWWWD}_${6H}.sp3"
 location = ["gps" "garner"]
 
 [f_igs_clk_30s]
-filename = "igs${WWWWD}.clk"
+filename = "igs${WWWWD}.clk_30s"
 location = ["gps" "garner"]
 
 [f_igs_clk_30s_old]
-filename = "igs${WWWWD}.clk_30s"
+filename = "igs${WWWWD}.clk"
 location = ["gps" "garner"]
 
 [f_igs_clk_5m_final]
@@ -650,7 +643,6 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -752,7 +744,7 @@ location = ["rtpp"]
 description = "Jet Propulsion Laboratory - orbits and clocks "
 final = "( jpl_sp3 ) & ( igs_erp_final1 ) & ( jpl_clk )"
 final_latency = [168 312]
-rapid = "( jpl_rapid_sp3 ) & ( igs_erp_rapid  ) & ( jpl_rapid_clk )"
+rapid = "( jpl_sp3_rapid ) & ( igs_erp_rapid  ) & ( jpl_rapid_clk )"
 
 [f_jpl_sp3]
 filename = "jpl${WWWWD}.sp3"
@@ -793,45 +785,45 @@ location = ["mgex"]
 filename = "gbm${WWWWD}.erp"
 location = ["mgex"]
 
-[f_gfz_rapid_sp3]
+[f_gfz_sp3_rapid]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_gfz_rapid_clk]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["mgex"]
+location = ["gnss"]
 
-[f_gfz_rapid_erp]
+[f_gfz_erp_rapid]
 filename = "GFZ0MGXRAP_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
-location = ["mgex"]
+location = ["gnss"]
 
-[f_gfz_ultra_sp3GR]
+[f_gfz_sp3GR_ultra]
 filename = "gfu${WWWW}0_${6H}.sp3"
 location = ["gfz_mgex_ultra"]
 
-[f_gfz_ultra_erpGR]
+[f_gfz_erpGR_ultra]
 filename = "gfu${WWWW}0_${6H}.erp"
 location = ["gfz_mgex_ultra"]
 
-[f_gfz_ultra_sp3]
+[f_gfz_sp3_ultra]
 filename = "gbu${WWWW}0_${6H}.sp3"
 location = ["gfz_mgex"]
 
-[f_gfz_ultra_erp]
+[f_gfz_erp_ultra]
 filename = "gbu${WWWW}0_${6H}.erp"
 location = ["gfz_mgex"]
 
 [f_gfz_sp3_new]
 filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_15M_ORB.SP3"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_gfz_erp_new]
 filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_01D_ERP.ERP"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_gfz_clk_new]
 filename = "GFZ0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["mgex"]
+location = ["gnss"]
 
 
 [f_hoic_gfz]
@@ -864,19 +856,19 @@ location = ["aiub_mgex"]
 
 [f_code_mgex_eph]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_code_mgex_clk_30s]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_code_mgex_erp]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_03D_12H_ERP.ERP"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_code_mgex_bias]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_01D_OSB.BIA"
-location = ["mgex"]
+location = ["gnss"]
 
 
 # CNES MGEX ----------------------------------------------------------------------------------------
@@ -973,15 +965,15 @@ location = ["esa"]
 
 [f_jaxa_eph]
 filename = "JAX0MGXFIN_${YYYY}${DOY}0000_01D_05M_ORB.SP3"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_jaxa_clk_30s]
 filename = "JAX0MGXFIN_${YYYY}${DOY}0000_01D_30S_CLK.CLK"
-location = ["mgex"]
+location = ["gnss"]
 
 [f_jaxa_erp]
 filename = "JAX0MGXFIN_${YYYY}${DOY}0000_03D_12H_ERP.ERP"
-location = ["mgex"]
+location = ["gnss"]
 
 
 # WUHAN --------------------------------------------------------------------------------------------
