Consider ERP files mandatory in IGS solutions

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -310,9 +310,9 @@ atm_load = "tuw_atm_load_v04"
 description = "IGS average solution "
 final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
-rapid = "igs_eph_gps_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
+rapid = "igs_eph_gps_rapid & ( igs_erp_rapid ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
-ultra = "igs_eph_gps_ultra & ( igs_erp_ultra | null )"
+ultra = "igs_eph_gps_ultra & ( igs_erp_ultra )"
 ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
@@ -347,9 +347,9 @@ atm_load = "tuw_atm_load_v04"
 description = "IGS average solution - GPS"
 final = "igs_eph_gps_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
-rapid = "igs_eph_gps_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
+rapid = "igs_eph_gps_rapid & ( igs_erp_rapid ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
-ultra = "igs_eph_gps_ultra & ( igs_erp_ultra | null )"
+ultra = "igs_eph_gps_ultra & ( igs_erp_ultra )"
 ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
@@ -360,7 +360,7 @@ atm_load = "tuw_atm_load_v04"
 description = "IGS average solution - GPS+GLONASS"
 final = "igs_eph_GR_final & ( igs_erp_final1 | igs_erp_final2 ) & ( igs_clk_30s | igs_clk_30s_old | igs_clk_5m_final )"
 final_latency = [288 432]
-ultra = "igs_eph_GR_rapid & ( igs_erp_rapid | null ) & ( igs_clk_5m_rapid )"
+ultra = "igs_eph_GR_rapid & ( igs_erp_rapid ) & ( igs_clk_5m_rapid )"
 ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
