Add PPP-wizard real time CNES archive (GREC orbits)

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -18,6 +18,7 @@ ggos_tuwien = ["vmf.geo.tuwien.ac.at" "80"]
 vmf_unb = ["unb-vmf1.gge.unb.ca" "80"]
 gfz = ["ftp.gfz-potsdam.de" "21"]
 bkg = ["igs.bkg.bund.de" "21"]
+ppp_wiz = ["www.ppp-wizard.net" "80"]
 
 #***************************************************************************************************
 # LOCATION DEFINITION
@@ -44,7 +45,7 @@ jpl_rapid = "?{jpl}/pub/JPL_GPS_Products/Rapid/${YYYY}/"
 gfz_mgex = "?{gfz}/pub/GNSS/products/mgex/${WWWW}/"
 gfz_mgex_ultra =  "?{gfz}/pub/GNSS/products/ultra/w${WWWW}/"
 rtpp = "?{ign_ensg}/pub/gps/products/rtpp/${WWWW}/"
-
+cnes_rt = "?{ppp_wiz}/products/REAL_TIME/"
 #brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
 
 #iono_cddis = "?{cddis}/gnss/products/ionex/${YYYY}/${DOY}/"
@@ -272,7 +273,7 @@ location = ["aiub_code"]
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_GR" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_GR" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GREC@cnes_rt" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -412,12 +413,22 @@ ultra_latency = [0 3]
 # CNES ---------------------------------------------------------------------------------------------
 
 [oc_cnes]
-description = "Centre national d'études spatiales - orbit products needed for integer ambiguity resolution ( GPS, GLONASS ) "
+description = "Centre national d'études spatiales"
 final = "( cnes_sp3 ) & ( cnes_erp ) & ( cnes_clk )"
 final_latency = [168 312]
 iono_center = "cnes"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
+atm_load = "tuw_atm_load_v04"
+
+# CNES ---------------------------------------------------------------------------------------------
+
+[oc_cnes_rt]
+description = "Centre national d'études spatiales - real time orbit from ppp-wizard.net"
+ultra = "( cnes_rt_sp3 ) & ( cnes_rt_clk )"
+bias = "cnes_rt_bias"
+ultra_latency = [0 25]
+iono_center = "cnes"
 atm_load = "tuw_atm_load_v04"
 
 # BNC ----------------------------------------------------------------------------------------------
@@ -716,6 +727,18 @@ location = ["gps"]
 filename = "grg${WWWW}7.erp"
 location = ["gps"]
 
+[f_cnes_rt_sp3]
+name = ["GREC@cod"]
+filename = "c2t${WWWWD}.sp3"
+location = ["cnes_rt"]
+
+[f_cnes_rt_clk]
+filename = "c2t${WWWWD}.clk"
+location = ["cnes_rt"]
+
+[f_cnes_rt_bias]
+filename = "c2t${WWWWD}.bia"
+location = ["cnes_rt"]
 
 # BNC ----------------------------------------------------------------------------------------------
 
