Add real-time orbits to resources

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -273,7 +273,7 @@ location = ["aiub_code"]
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_GR" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GREC@cnes_rt" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GREC@cnes_rt" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -315,6 +315,8 @@ rapid = "igs_eph_gps_rapid & ( igs_erp_rapid ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
 ultra = "igs_eph_gps_ultra & ( igs_erp_ultra )"
 ultra_latency = [0 9]
+real-time = "( rtpp_sp3 ) & ( rtpp_clk )"
+real-time_latency = [0 0]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
@@ -352,6 +354,8 @@ rapid = "igs_eph_gps_rapid & ( igs_erp_rapid ) & ( igs_clk_5m_rapid )"
 rapid_latency = [17 41]
 ultra = "igs_eph_gps_ultra & ( igs_erp_ultra )"
 ultra_latency = [0 9]
+real-time = "( rtpp_sp3 ) & ( rtpp_clk )"
+real-time_latency = [0 0]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_center = "default"
@@ -401,8 +405,8 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_code_predicted]
 description = "Center for Orbit Determination Europe - 1 day predicted - experimental"
-ultra = "( codep_eph ) & ( codep_erp )"
-ultra_latency = [0 3]
+real-time = "( codep_eph ) & ( codep_erp )"
+real-time_latency = [0 3]
 
 [oc_code_ultra]
 description = "Center for Orbit Determination Europe - ultrarapid - no download"
@@ -425,23 +429,17 @@ atm_load = "tuw_atm_load_v04"
 
 [oc_cnes_rt]
 description = "Centre national d'études spatiales - real time orbit from ppp-wizard.net"
-ultra = "( cnes_rt_sp3 ) & ( cnes_rt_clk )"
+real-time = "( cnes_rt_sp3 ) & ( cnes_rt_clk )"
+real-time_latency = [0 25]
 bias = "cnes_rt_bias"
-ultra_latency = [0 25]
 iono_center = "cnes"
 atm_load = "tuw_atm_load_v04"
 
 # BNC ----------------------------------------------------------------------------------------------
 [oc_bnc]
 description = "Real-time orbits and clocks from IGS Real-time Project (no download)"
-final = "( bnc_sp3 ) & ( bnc_clk )"
-final_latency = [0 0]
-
-# RTPP ----------------------------------------------------------------------------------------------
-[oc_rtpp]
-description = "Real-time orbits and clocks from IGS Real-time Project, collected daily by CDDIS"
-final = "( rtpp_sp3 ) & ( rtpp_clk )"
-final_latency = [0 0]
+real-time = "( bnc_sp3 ) & ( bnc_clk )"
+real-time_latency = [0 0]
 
 # GFZ ----------------------------------------------------------------------------------------------
 
