Update CNES real-time resources

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -273,7 +273,7 @@ location = ["aiub_code"]
 #***************************************************************************************************
 
 [ORBIT_CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GREC@cnes_rt" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRE@code_predicted" "GRE@code_ultra" "GRECJ@code_mgex_aiub" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GR@cnes_rtGR" "GREC@cnes_rt" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc" "G@rtpp"]
 
 #***************************************************************************************************
 # ORBIT CENTER DEFINITION
@@ -423,6 +423,16 @@ final_latency = [168 312]
 iono_center = "cnes"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
+atm_load = "tuw_atm_load_v04"
+
+# CNES ---------------------------------------------------------------------------------------------
+
+[oc_cnes_rtGR]
+description = "Centre national d'études spatiales - old real time orbit from ppp-wizard.net GR only"
+real-time = "( cnes_rtGR_sp3 ) & ( cnes_rtGR_clk )"
+real-time_latency = [0 25]
+bias = "cnes_rtGR_bias"
+iono_center = "cnes"
 atm_load = "tuw_atm_load_v04"
 
 # CNES ---------------------------------------------------------------------------------------------
@@ -725,17 +735,30 @@ location = ["gps"]
 filename = "grg${WWWW}7.erp"
 location = ["gps"]
 
+[f_cnes_rtGR_sp3]
+name = ["GR@cod"]
+filename = "cnt${WWWWD}.sp3"
+location = ["cnes_rt"]
+
+[f_cnes_rtGR_clk]
+filename = "cnt${WWWWD}.clk"
+location = ["cnes_rt"]
+
+[f_cnes_rtGR_bias]
+filename = "cnt${WWWWD}.bia"
+location = ["cnes_rt"]
+
 [f_cnes_rt_sp3]
 name = ["GREC@cod"]
-filename = "c2t${WWWWD}.sp3"
+filename = "cnt${WWWWD}.sp3"
 location = ["cnes_rt"]
 
 [f_cnes_rt_clk]
-filename = "c2t${WWWWD}.clk"
+filename = "cnt${WWWWD}.clk"
 location = ["cnes_rt"]
 
 [f_cnes_rt_bias]
-filename = "c2t${WWWWD}.bia"
+filename = "cnt${WWWWD}.bia"
 location = ["cnes_rt"]
 
 # BNC ----------------------------------------------------------------------------------------------
